internal/compiler/testdata/fuzz/crashers/5e58503255170b320a99aa50c003ebddc9c8b80a.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x53b6b2]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0x0, 0x400, 0x40, 0x7fd750fe8900, 0x7fd7511dffff)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010db80, 0xc000110000, 0x44880c, 0xc0000fc4b4, 0x10000c00004ea60)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010e2c0, 0xc00004ec00, 0x38, 0x3, 0x110040)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x680
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010d8c0, 0x0, 0xc00004edc0, 0x5016e2, 0xc000110080)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010d600, 0x5a2820, 0x5a2820, 0xc000110080, 0xc000103f80)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010d340, 0x0, 0x2, 0x1, 0x15)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010d080, 0xc00004f1a8, 0x50496e, 0xc000110080, 0x5a0002)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010cdc0, 0x4f48f5, 0xc0000cf400, 0x5a2820, 0x1)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010cb00, 0xd, 0x5a2820, 0x1, 0x1)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010c840, 0x15, 0x14, 0x0, 0x2)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010c580, 0x5a0002, 0xc00009a6f0, 0x5a2820, 0xc000110080)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010c2c0, 0x1, 0x9, 0x8, 0x1)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc00010c000, 0x1, 0x15, 0x14, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc0000bfac0, 0xc000109b80, 0x2, 0xc0000fc4bb, 0x0, 0xc00004faf0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b9
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc0000bfac0, 0xc00005e600, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x15, 0xc00004fb40)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x223
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc0000bfac0, 0xc0000712c0, 0x40b616, 0xc000110100, 0x40, 0x38)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf3
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc0000bfac0, 0xc0000712c0, 0x0, 0xc00004fc60, 0x411143, 0xc000110100)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x127
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc0000bfac0, 0xc00006e960, 0x0, 0x2, 0xc0000fc4c7, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc0000bfac0, 0xc00010a000, 0x0, 0x2, 0xc0000fc4c7, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7a
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc0000bfac0, 0xc00010a000, 0x0, 0x0, 0x0, 0x0)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x7fd750c80000, 0x14, 0x14, 0x3)
	/home/tsatke/code/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc00004ff70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2